--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   flutter:
     sdk: flutter
   path_provider: ^2.0.11
+  multi_select_flutter: ^4.1.0
+
 
 
   # The following adds the Cupertino Icons font to your application.
