--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   lottie: ^3.3.1
+  shared_preferences: ^2.4.0
 
 dev_dependencies:
   flutter_test:
